make reference for invoices editable

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -19,11 +19,10 @@
 
 
 
-	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
+	<link rel="stylesheet" href="/style.css?v=20211117" type="text/css" media="handheld, all">
 
 	<script type="text/javascript" src="/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/jquery.selectareas.min.js"></script>
-	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/moment/min/moment.min.js"></script>
 	<script type="text/javascript" src="/tigron-confirm-modal/js/bootstrap.confirm-modal.js"></script>
 	<script type="text/javascript" src="/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
@@ -33,6 +32,7 @@
 	<script type="text/javascript" src="/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
 	<script type="text/javascript" src="/autosize/dist/autosize.min.js"></script>
 	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 	<script type="text/javascript" src="/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 	<script type="text/javascript" src="/urijs/src/URI.js"></script>
