--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -9,6 +9,14 @@ body {
 	font-size: 13px
 }
 
+.no-margin {
+	margin: 0 !important;
+}
+
+.no-padding {
+	padding: 0 !important;
+}
+
 #login {
 	background-color: #fff;
 	color: #fff
