--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -12,8 +12,11 @@
 			<li class="active">{% trans "Details" %}</li>
 		</ol>
 
-		{% if env.sticky_session.message is defined %}
-			{{ base.display_flash_message(env.sticky_session.message, 'invoice') }}
+		{% if env.sticky_session.message == 'updated' %}
+			<div class="alert alert-success alert-dismissable">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				{{ "Invoice successfully updated and regenerated" }}
+			</div>
 		{% endif %}
 
 		<div class="row">
@@ -45,13 +48,6 @@
 									<span class="glyphicon glyphicon-remove"></span> {% trans "No" %}
 								{% endif %}
 							</dd>
-
-							<dt>{% trans "Reference" %}</dt>
-							<dd>{{ invoice.reference }}</dd>
-
-							<dt>{% trans "Internal reference" %}</dt>
-							<dd>{{ invoice.internal_reference }}</dd>
-
 							<dt>{% trans "Download PDF" %}</dt>
 							<dd>
 								<a href="/sales/invoice?action=download&id={{ invoice.id }}"><i class="fa fa-file-pdf-o"></i> invoice_{{ invoice.number }}.pdf</a>
@@ -101,7 +97,34 @@
 							</div>
 						</div>
 
+						<div class="form-group">
+							<label class="col-xs-3 control-label">{% trans "Reference" %}</label>
+							<div class="col-xs-9">
+								{% if not invoice.paid %}
+									<input class="form-control-static col-xs-5" type="text" name="invoice[reference]" value="{{ invoice.reference }}"></input>
+								{% else %}
+									<p class="form-control-static">{{ invoice.reference }}</p>	
+								{% endif %}
+							</div>
+						</div>
 
+						<div class="form-group">
+							<label class="col-xs-3 control-label">{% trans "Internal reference" %}</label>
+							<div class="col-xs-9">
+								{% if not invoice.paid %}
+									<input class="form-control-static col-xs-5" type="text" name="invoice[internal_reference]" value="{{ invoice.internal_reference }}"></input>
+								{% else %}
+									<p class="form-control-static">{{ invoice.reference }}</p>
+								{% endif %}
+							</div>
+						</div>
+						{% if not invoice.paid %}
+							<div class="form-group">
+								<div class="col-xs-9 col-xs-offset-3">
+									<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>					
+								</div>
+							</div>
+						{% endif %}
 					</div>
 				</div>
 				</form>
@@ -109,6 +132,9 @@
 		</div>
 
 		<script type="text/javascript">
+			$(function () {
+				$('[data-toggle="tooltip"]').tooltip()
+				})
 
 			function set_reminder(element) {
 				if ($(element).is(':checked')) {
