--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -103,7 +103,7 @@
 								{% if not invoice.paid %}
 									<input class="form-control-static col-xs-5" type="text" name="invoice[reference]" value="{{ invoice.reference }}"></input>
 								{% else %}
-									<p class="form-control-static">{{ invoice.reference }}</p>	
+									<p class="form-control-static">{{ invoice.reference }}</p>
 								{% endif %}
 							</div>
 						</div>
@@ -114,14 +114,14 @@
 								{% if not invoice.paid %}
 									<input class="form-control-static col-xs-5" type="text" name="invoice[internal_reference]" value="{{ invoice.internal_reference }}"></input>
 								{% else %}
-									<p class="form-control-static">{{ invoice.reference }}</p>
+									<p class="form-control-static">{{ invoice.internal_reference }}</p>
 								{% endif %}
 							</div>
 						</div>
 						{% if not invoice.paid %}
 							<div class="form-group">
 								<div class="col-xs-9 col-xs-offset-3">
-									<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>					
+									<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 								</div>
 							</div>
 						{% endif %}
