--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -26,7 +26,7 @@ body {
 		text-align: center;
 		padding: 0 20px 20px 20px;
 	}
-	
+
 	#login-wrapper {
 		max-width: 460px;
 		margin: 0 auto;
@@ -226,4 +226,11 @@ dt, label {
 }
 .btn, .form-control {
 	border-radius: 0;
+}
+
+/**
+ * Typeahead
+ */
+.form-control.typeahead {
+	width: 100%;
 }
