--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -79,14 +79,14 @@
 						</select>
 					</div>
 				</div>
-
+				
 				<div class="form-group form-advanced {% if env.sticky_session.advanced is not defined %}hide{% endif %}">
 					<label class="col-xs-3 control-label">{% trans "Booking status" %}</label>
 					<div class="col-xs-9">
 						<select name="accounting_identifier" class="form-control">
 							<option value="all">{% trans "Any" %}</option>
 							<option value="not_empty" {% if pager.has_condition('document_incoming_invoice.accounting_identifier', '!=', '') %}selected{% endif %}>{% trans "Booked" %}</option>
-							<option value="empty" {% if pager.has_condition('document_incoming_invoice.accounting_identifier', '=', '') %}selected{% endif %}>{% trans "Not booked" %}</option>
+							<option value="empty" {% if "document.id" in pager.get_conditions|keys %}selected{% endif %}>{% trans "Not booked" %}</option>
 						</select>
 					</div>
 				</div>
